<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/changepasswordTitle"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/ic_back" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Label">

            <EditText
                android:id="@+id/etOldPassword"
                style="@style/Login_EditText"
                android:drawableRight="@drawable/ic_password"
                android:hint="@string/changepassword_old_password"
                android:inputType="textPassword"
                android:maxLength="@integer/maxPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Label">

            <EditText
                android:id="@+id/etNewPassword"
                style="@style/Login_EditText"
                android:drawableRight="@drawable/ic_password"
                android:hint="@string/changepassword_new_password"
                android:inputType="textPassword"
                android:maxLength="@integer/maxPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Label">

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/Login_EditText"
                android:drawableRight="@drawable/ic_password"
                android:hint="@string/changepassword_confirm_password"
                android:inputType="textPassword"
                android:maxLength="@integer/maxPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Login_Button"
            android:text="@string/btn_submit" />
    </LinearLayout>
</RelativeLayout>
