<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.nichetech.smartonsite.benchmark.Activities.LoginActivity">


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/iv_login_header_marginleft"
            android:layout_marginRight="@dimen/iv_login_header_marginright"
            android:layout_marginTop="@dimen/iv_login_header_margintop"
            android:src="@drawable/login_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ll_login_marginright"
            android:layout_marginLeft="@dimen/ll_login_marginleft"
            android:layout_marginRight="@dimen/ll_login_marginright"
            android:theme="@style/Text_Label">

            <EditText
                android:id="@+id/etMobileNumber"
                style="@style/Login_EditText"
                android:digits="0123456789"
                android:drawableRight="@drawable/ic_mobile_number"
                android:hint="@string/forgotMobileNo"
                android:maxLength="10"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Login_Button"
            android:text="@string/forgotSubmit" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/tv_forgot_margintop"
            android:paddingLeft="@dimen/tv_forgot_paddingleft"
            android:paddingRight="@dimen/tv_forgot_paddingright"
            android:text="@string/forgotLogin"
            android:textColor="@color/colorLoginButton"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>
